# advent-of-code-2023

./: default-settings.json
day_1/src/: input.rs  lib.rs
day_3/: Cargo.toml
day_3/benches/: bench.rs
day_3/src/: all_parts.rs  gear_ratio.rs  input.rs  lib.rs  main.rs  sum_parts.rs
day_4/benches/: bench.rs
day_4/src/: input.rs  lib.rs  part_1.rs  part_2.rs
day_5/: Cargo.toml
day_5/benches/: bench.rs
day_5/src/: input.rs  part_1.rs
day_5/src/part_1/: func.rs  impr.rs
src/: lib.rs  main.rs
