[package]
name = "day_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cond_utils = "0.1.0"
ndarray = "0.15.6"
num = "0.4.1"
num-traits = "0.2.18"
regex = "1.10.3"

[profile.release]
debug = true
lto = true
